@@ -114,8 +114,8 @@ class ChromiumPort(base.Port):
         return os.path.join(self._chromium_base_dir, *comps)
 
     def path_to_test_expectations_file(self):
-        return self.path_from_chromium_base('webkit', 'tools', 'layout_tests',
-                                            'test_expectations.txt')
+        return self.path_from_webkit_base('LayoutTests', 'platform',
+            'chromium', 'test_expectations.txt')
 
     def results_directory(self):
         return self.path_from_chromium_base('webkit', self._options.target,
@@ -164,6 +164,14 @@ class ChromiumPort(base.Port):
         test_expectations file. See test_expectations.py for more details."""
         expectations_file = self.path_to_test_expectations_file()
         return file(expectations_file, "r").read()
+
+    def test_expectations_overrides(self):
+        overrides_file = self.path_from_chromium_base('webkit', 'tools',
+            'layout_tests', 'test_expectations.txt')
+        if os.path.exists(overrides_file):
+            return file(expectations_file, "r").read()
+        else:
+            return None
 
     def test_platform_names(self):
         return self.test_base_platform_names() + ('win-xp',
