@@ -1,3 +1,15 @@
+2010-03-19  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        Flip the Chromium ports to look first for the test expectations
+        in LayoutTests/platform/chromium and only afterwards look in the
+        Chromium repo downstream for overrides.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36326
+
+        * Scripts/webkitpy/layout_tests/port/chromium.py:
+
 2010-03-19  James Hawkins  <jhawkins@chromium.org>
 
         Unreviewed.
